test/sematest/invalid/invalid_lvalue4.java
class Foo {
  public static void main(String[] args) {
    null = new Foo();
  }
}
